// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account sync import never matches existing with financial ids 1`] = `
Array [
  Object {
    "account": "one",
    "amount": 8105,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id18",
    "imported_id": "5629ec0c-e559-49f4-9105-91d7b8b8738a",
    "imported_payee": "Transaction 90",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Transaction 90",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -473,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id22",
    "imported_id": "45a2ad98-acbc-4120-a856-dec0839fa73c",
    "imported_payee": "Transaction 54",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id9",
    "payee_name": "Transaction 54",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1462,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id20",
    "imported_id": "8791ca7e-5c19-4f23-bdf9-f60ee2a90081",
    "imported_payee": "Transaction 79",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id7",
    "payee_name": "Transaction 79",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4207,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id19",
    "imported_id": "254ad9b3-23aa-4f70-b617-e126e054cc0e",
    "imported_payee": "Transaction 3",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id6",
    "payee_name": "Transaction 3",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5093,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id21",
    "imported_id": "8e0ddc45-d545-4504-bed7-23c417a90f90",
    "imported_payee": "Transaction 51",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id8",
    "payee_name": "Transaction 51",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5938,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id23",
    "imported_id": "00ab7e01-73f7-4da0-98f3-233f1dcc5b3e",
    "imported_payee": "Transaction 68",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id10",
    "payee_name": "Transaction 68",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 35884,
    "category": "id2",
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id4",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id3",
    "payee_name": "Starting Balance",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 1,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1105,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id25",
    "imported_id": "6a764abf-69f4-47a6-94e1-638c7df0e245",
    "imported_payee": "Transaction 64",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id12",
    "payee_name": "Transaction 64",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3200,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id24",
    "imported_id": "1b25b9df-8aa4-47c8-9792-75f4c38e351f",
    "imported_payee": "Transaction 11",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id11",
    "payee_name": "Transaction 11",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3342,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id28",
    "imported_id": "f4b34ee3-6d5b-4625-bffc-057a72270140",
    "imported_payee": "Transaction 48",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id15",
    "payee_name": "Transaction 48",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3984,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id26",
    "imported_id": "768b6d36-0ad7-47fb-a631-145170adc0b9",
    "imported_payee": "Transaction 107",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id13",
    "payee_name": "Transaction 107",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4524,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id30",
    "imported_id": "f4e3a3f2-c20f-4667-8df6-6530bf5f4cb0",
    "imported_payee": "Transaction 56",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id17",
    "payee_name": "Transaction 56",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4881,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id27",
    "imported_id": "ceb53daf-7318-4aee-a562-19a45654eaa7",
    "imported_payee": "Transaction 28",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id14",
    "payee_name": "Transaction 28",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5541,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id29",
    "imported_id": "af2d6eba-f75e-4ee0-a9ad-5d9f8264797b",
    "imported_payee": "Transaction 114",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id16",
    "payee_name": "Transaction 114",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Account sync import never matches existing with financial ids 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -65,10 +65,54 @@
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
    },
    Object {
      \\"account\\": \\"one\\",
+     \\"amount\\": -2947,
+     \\"category\\": null,
+     \\"cleared\\": 1,
+     \\"date\\": 20171015,
+     \\"error\\": null,
+     \\"id\\": \\"one\\",
+     \\"imported_id\\": \\"trans1\\",
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id31\\",
+     \\"payee_name\\": \\"foo\\",
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": null,
+   },
+   Object {
+     \\"account\\": \\"one\\",
+     \\"amount\\": -2947,
+     \\"category\\": null,
+     \\"cleared\\": 1,
+     \\"date\\": 20171015,
+     \\"error\\": null,
+     \\"id\\": \\"two\\",
+     \\"imported_id\\": \\"trans2\\",
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id32\\",
+     \\"payee_name\\": \\"bar\\",
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": null,
+   },
+   Object {
+     \\"account\\": \\"one\\",
      \\"amount\\": -4207,
      \\"category\\": null,
      \\"cleared\\": 1,
      \\"date\\": 20171015,
      \\"error\\": null,"
`;

exports[`Account sync import never matches existing with financial ids 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,110 +1,154 @@
  Array [
    Object {
      \\"account\\": \\"one\\",
-     \\"amount\\": 8105,
+     \\"amount\\": -1865,
      \\"category\\": null,
      \\"cleared\\": 1,
-     \\"date\\": 20171015,
+     \\"date\\": 20171017,
      \\"error\\": null,
-     \\"id\\": \\"id18\\",
-     \\"imported_id\\": \\"5629ec0c-e559-49f4-9105-91d7b8b8738a\\",
-     \\"imported_payee\\": \\"Transaction 90\\",
+     \\"id\\": \\"id36\\",
+     \\"imported_id\\": \\"622f7b61-a6be-4ce5-bd2f-50eb14c12f42\\",
+     \\"imported_payee\\": \\"Transaction 53\\",
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": null,
      \\"parent_id\\": null,
-     \\"payee\\": \\"id5\\",
-     \\"payee_name\\": \\"Transaction 90\\",
+     \\"payee\\": \\"id34\\",
+     \\"payee_name\\": \\"Transaction 53\\",
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
    },
    Object {
      \\"account\\": \\"one\\",
-     \\"amount\\": -473,
+     \\"amount\\": -2947,
      \\"category\\": null,
      \\"cleared\\": 1,
-     \\"date\\": 20171015,
+     \\"date\\": 20171017,
      \\"error\\": null,
-     \\"id\\": \\"id22\\",
-     \\"imported_id\\": \\"45a2ad98-acbc-4120-a856-dec0839fa73c\\",
-     \\"imported_payee\\": \\"Transaction 54\\",
+     \\"id\\": \\"one\\",
+     \\"imported_id\\": \\"3591ad03-b705-42e0-945d-402a70371c49\\",
+     \\"imported_payee\\": \\"foo\\",
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": null,
      \\"parent_id\\": null,
-     \\"payee\\": \\"id9\\",
-     \\"payee_name\\": \\"Transaction 54\\",
+     \\"payee\\": \\"id31\\",
+     \\"payee_name\\": \\"foo\\",
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
    },
    Object {
      \\"account\\": \\"one\\",
-     \\"amount\\": -1462,
+     \\"amount\\": -2947,
+     \\"category\\": null,
+     \\"cleared\\": 1,
+     \\"date\\": 20171017,
+     \\"error\\": null,
+     \\"id\\": \\"two\\",
+     \\"imported_id\\": \\"01a3a594-a381-49d1-bcf8-331a3c410900\\",
+     \\"imported_payee\\": \\"bar\\",
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id32\\",
+     \\"payee_name\\": \\"bar\\",
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": null,
+   },
+   Object {
+     \\"account\\": \\"one\\",
+     \\"amount\\": -2407,
+     \\"category\\": null,
+     \\"cleared\\": 1,
+     \\"date\\": 20171016,
+     \\"error\\": null,
+     \\"id\\": \\"id35\\",
+     \\"imported_id\\": \\"753911ce-7b09-4cb3-8447-ac6eb74e727e\\",
+     \\"imported_payee\\": \\"Transaction 32\\",
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id33\\",
+     \\"payee_name\\": \\"Transaction 32\\",
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": null,
+   },
+   Object {
+     \\"account\\": \\"one\\",
+     \\"amount\\": 8105,
      \\"category\\": null,
      \\"cleared\\": 1,
      \\"date\\": 20171015,
      \\"error\\": null,
-     \\"id\\": \\"id20\\",
-     \\"imported_id\\": \\"8791ca7e-5c19-4f23-bdf9-f60ee2a90081\\",
-     \\"imported_payee\\": \\"Transaction 79\\",
+     \\"id\\": \\"id18\\",
+     \\"imported_id\\": \\"5629ec0c-e559-49f4-9105-91d7b8b8738a\\",
+     \\"imported_payee\\": \\"Transaction 90\\",
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": null,
      \\"parent_id\\": null,
-     \\"payee\\": \\"id7\\",
-     \\"payee_name\\": \\"Transaction 79\\",
+     \\"payee\\": \\"id5\\",
+     \\"payee_name\\": \\"Transaction 90\\",
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
    },
    Object {
      \\"account\\": \\"one\\",
-     \\"amount\\": -2947,
+     \\"amount\\": -473,
      \\"category\\": null,
      \\"cleared\\": 1,
      \\"date\\": 20171015,
      \\"error\\": null,
-     \\"id\\": \\"one\\",
-     \\"imported_id\\": \\"trans1\\",
-     \\"imported_payee\\": null,
+     \\"id\\": \\"id22\\",
+     \\"imported_id\\": \\"45a2ad98-acbc-4120-a856-dec0839fa73c\\",
+     \\"imported_payee\\": \\"Transaction 54\\",
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": null,
      \\"parent_id\\": null,
-     \\"payee\\": \\"id31\\",
-     \\"payee_name\\": \\"foo\\",
+     \\"payee\\": \\"id9\\",
+     \\"payee_name\\": \\"Transaction 54\\",
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
    },
    Object {
      \\"account\\": \\"one\\",
-     \\"amount\\": -2947,
+     \\"amount\\": -1462,
      \\"category\\": null,
      \\"cleared\\": 1,
      \\"date\\": 20171015,
      \\"error\\": null,
-     \\"id\\": \\"two\\",
-     \\"imported_id\\": \\"trans2\\",
-     \\"imported_payee\\": null,
+     \\"id\\": \\"id20\\",
+     \\"imported_id\\": \\"8791ca7e-5c19-4f23-bdf9-f60ee2a90081\\",
+     \\"imported_payee\\": \\"Transaction 79\\",
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": null,
      \\"parent_id\\": null,
-     \\"payee\\": \\"id32\\",
-     \\"payee_name\\": \\"bar\\",
+     \\"payee\\": \\"id7\\",
+     \\"payee_name\\": \\"Transaction 79\\",
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,"
`;

exports[`Account sync import updates transfers when matched 1`] = `
Array [
  Object {
    "account": "one",
    "amount": 8105,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id18",
    "imported_id": "5629ec0c-e559-49f4-9105-91d7b8b8738a",
    "imported_payee": "Transaction 90",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Transaction 90",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -473,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id22",
    "imported_id": "45a2ad98-acbc-4120-a856-dec0839fa73c",
    "imported_payee": "Transaction 54",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id9",
    "payee_name": "Transaction 54",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1462,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id20",
    "imported_id": "8791ca7e-5c19-4f23-bdf9-f60ee2a90081",
    "imported_payee": "Transaction 79",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id7",
    "payee_name": "Transaction 79",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4207,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id19",
    "imported_id": "254ad9b3-23aa-4f70-b617-e126e054cc0e",
    "imported_payee": "Transaction 3",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id6",
    "payee_name": "Transaction 3",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5093,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id21",
    "imported_id": "8e0ddc45-d545-4504-bed7-23c417a90f90",
    "imported_payee": "Transaction 51",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id8",
    "payee_name": "Transaction 51",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5938,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id23",
    "imported_id": "00ab7e01-73f7-4da0-98f3-233f1dcc5b3e",
    "imported_payee": "Transaction 68",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id10",
    "payee_name": "Transaction 68",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 35884,
    "category": "id2",
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id4",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id3",
    "payee_name": "Starting Balance",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 1,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1105,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id25",
    "imported_id": "6a764abf-69f4-47a6-94e1-638c7df0e245",
    "imported_payee": "Transaction 64",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id12",
    "payee_name": "Transaction 64",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3200,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id24",
    "imported_id": "1b25b9df-8aa4-47c8-9792-75f4c38e351f",
    "imported_payee": "Transaction 11",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id11",
    "payee_name": "Transaction 11",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3342,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id28",
    "imported_id": "f4b34ee3-6d5b-4625-bffc-057a72270140",
    "imported_payee": "Transaction 48",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id15",
    "payee_name": "Transaction 48",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3984,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id26",
    "imported_id": "768b6d36-0ad7-47fb-a631-145170adc0b9",
    "imported_payee": "Transaction 107",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id13",
    "payee_name": "Transaction 107",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4524,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id30",
    "imported_id": "f4e3a3f2-c20f-4667-8df6-6530bf5f4cb0",
    "imported_payee": "Transaction 56",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id17",
    "payee_name": "Transaction 56",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4881,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id27",
    "imported_id": "ceb53daf-7318-4aee-a562-19a45654eaa7",
    "imported_payee": "Transaction 28",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id14",
    "payee_name": "Transaction 28",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5541,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id29",
    "imported_id": "af2d6eba-f75e-4ee0-a9ad-5d9f8264797b",
    "imported_payee": "Transaction 114",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id16",
    "payee_name": "Transaction 114",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Account sync import updates transfers when matched 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -20,10 +20,32 @@
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
    },
    Object {
+     \\"account\\": \\"two\\",
+     \\"amount\\": 2948,
+     \\"category\\": null,
+     \\"cleared\\": 1,
+     \\"date\\": 20171015,
+     \\"error\\": null,
+     \\"id\\": \\"one\\",
+     \\"imported_id\\": null,
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"transfer-one\\",
+     \\"payee_name\\": \\"\\",
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": \\"id31\\",
+   },
+   Object {
      \\"account\\": \\"one\\",
      \\"amount\\": -473,
      \\"category\\": null,
      \\"cleared\\": 1,
      \\"date\\": 20171015,
@@ -62,10 +84,32 @@
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
+   },
+   Object {
+     \\"account\\": \\"one\\",
+     \\"amount\\": -2948,
+     \\"category\\": null,
+     \\"cleared\\": 0,
+     \\"date\\": 20171015,
+     \\"error\\": null,
+     \\"id\\": \\"id31\\",
+     \\"imported_id\\": null,
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"transfer-two\\",
+     \\"payee_name\\": \\"\\",
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": \\"one\\",
    },
    Object {
      \\"account\\": \\"one\\",
      \\"amount\\": -4207,
      \\"category\\": null,"
`;

exports[`Account sync import updates transfers when matched 3`] = `
Array [
  Object {
    "account": "two",
    "amount": 2948,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "one",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "transfer-one",
    "payee_name": "",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": "id31",
  },
  Object {
    "account": "one",
    "amount": -1865,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id38",
    "imported_id": "622f7b61-a6be-4ce5-bd2f-50eb14c12f42",
    "imported_payee": "Transaction 53",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id35",
    "payee_name": "Transaction 53",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -2948,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id31",
    "imported_id": "3591ad03-b705-42e0-945d-402a70371c49",
    "imported_payee": "#001 fenn st Macy's 33333 EMX",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "transfer-two",
    "payee_name": "",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": "one",
  },
  Object {
    "account": "one",
    "amount": -4911,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id37",
    "imported_id": "01a3a594-a381-49d1-bcf8-331a3c410900",
    "imported_payee": "Transaction 78",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id34",
    "payee_name": "Transaction 78",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -2407,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id36",
    "imported_id": "753911ce-7b09-4cb3-8447-ac6eb74e727e",
    "imported_payee": "Transaction 32",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id32",
    "payee_name": "Transaction 32",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 8105,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id18",
    "imported_id": "5629ec0c-e559-49f4-9105-91d7b8b8738a",
    "imported_payee": "Transaction 90",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Transaction 90",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -473,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id22",
    "imported_id": "45a2ad98-acbc-4120-a856-dec0839fa73c",
    "imported_payee": "Transaction 54",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id9",
    "payee_name": "Transaction 54",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1462,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id20",
    "imported_id": "8791ca7e-5c19-4f23-bdf9-f60ee2a90081",
    "imported_payee": "Transaction 79",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id7",
    "payee_name": "Transaction 79",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4207,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id19",
    "imported_id": "254ad9b3-23aa-4f70-b617-e126e054cc0e",
    "imported_payee": "Transaction 3",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id6",
    "payee_name": "Transaction 3",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5093,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id21",
    "imported_id": "8e0ddc45-d545-4504-bed7-23c417a90f90",
    "imported_payee": "Transaction 51",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id8",
    "payee_name": "Transaction 51",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5938,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id23",
    "imported_id": "00ab7e01-73f7-4da0-98f3-233f1dcc5b3e",
    "imported_payee": "Transaction 68",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id10",
    "payee_name": "Transaction 68",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 35884,
    "category": "id2",
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id4",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id3",
    "payee_name": "Starting Balance",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 1,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1105,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id25",
    "imported_id": "6a764abf-69f4-47a6-94e1-638c7df0e245",
    "imported_payee": "Transaction 64",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id12",
    "payee_name": "Transaction 64",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3200,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id24",
    "imported_id": "1b25b9df-8aa4-47c8-9792-75f4c38e351f",
    "imported_payee": "Transaction 11",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id11",
    "payee_name": "Transaction 11",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3342,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id28",
    "imported_id": "f4b34ee3-6d5b-4625-bffc-057a72270140",
    "imported_payee": "Transaction 48",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id15",
    "payee_name": "Transaction 48",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3984,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id26",
    "imported_id": "768b6d36-0ad7-47fb-a631-145170adc0b9",
    "imported_payee": "Transaction 107",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id13",
    "payee_name": "Transaction 107",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4524,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id30",
    "imported_id": "f4e3a3f2-c20f-4667-8df6-6530bf5f4cb0",
    "imported_payee": "Transaction 56",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id17",
    "payee_name": "Transaction 56",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4881,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id27",
    "imported_id": "ceb53daf-7318-4aee-a562-19a45654eaa7",
    "imported_payee": "Transaction 28",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id14",
    "payee_name": "Transaction 28",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5541,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id29",
    "imported_id": "af2d6eba-f75e-4ee0-a9ad-5d9f8264797b",
    "imported_payee": "Transaction 114",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id16",
    "payee_name": "Transaction 114",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Account sync imports transactions for current day and adds latest 1`] = `
Array [
  Object {
    "account": "one",
    "amount": 8105,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id18",
    "imported_id": "5629ec0c-e559-49f4-9105-91d7b8b8738a",
    "imported_payee": "Transaction 90",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Transaction 90",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -473,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id22",
    "imported_id": "45a2ad98-acbc-4120-a856-dec0839fa73c",
    "imported_payee": "Transaction 54",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id9",
    "payee_name": "Transaction 54",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1462,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id20",
    "imported_id": "8791ca7e-5c19-4f23-bdf9-f60ee2a90081",
    "imported_payee": "Transaction 79",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id7",
    "payee_name": "Transaction 79",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4207,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id19",
    "imported_id": "254ad9b3-23aa-4f70-b617-e126e054cc0e",
    "imported_payee": "Transaction 3",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id6",
    "payee_name": "Transaction 3",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5093,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id21",
    "imported_id": "8e0ddc45-d545-4504-bed7-23c417a90f90",
    "imported_payee": "Transaction 51",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id8",
    "payee_name": "Transaction 51",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5938,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id23",
    "imported_id": "00ab7e01-73f7-4da0-98f3-233f1dcc5b3e",
    "imported_payee": "Transaction 68",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id10",
    "payee_name": "Transaction 68",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 35884,
    "category": "id2",
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id4",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id3",
    "payee_name": "Starting Balance",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 1,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1105,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id25",
    "imported_id": "6a764abf-69f4-47a6-94e1-638c7df0e245",
    "imported_payee": "Transaction 64",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id12",
    "payee_name": "Transaction 64",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3200,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id24",
    "imported_id": "1b25b9df-8aa4-47c8-9792-75f4c38e351f",
    "imported_payee": "Transaction 11",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id11",
    "payee_name": "Transaction 11",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3342,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id28",
    "imported_id": "f4b34ee3-6d5b-4625-bffc-057a72270140",
    "imported_payee": "Transaction 48",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id15",
    "payee_name": "Transaction 48",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3984,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id26",
    "imported_id": "768b6d36-0ad7-47fb-a631-145170adc0b9",
    "imported_payee": "Transaction 107",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id13",
    "payee_name": "Transaction 107",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4524,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id30",
    "imported_id": "f4e3a3f2-c20f-4667-8df6-6530bf5f4cb0",
    "imported_payee": "Transaction 56",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id17",
    "payee_name": "Transaction 56",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4881,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id27",
    "imported_id": "ceb53daf-7318-4aee-a562-19a45654eaa7",
    "imported_payee": "Transaction 28",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id14",
    "payee_name": "Transaction 28",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5541,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id29",
    "imported_id": "af2d6eba-f75e-4ee0-a9ad-5d9f8264797b",
    "imported_payee": "Transaction 114",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id16",
    "payee_name": "Transaction 114",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Account sync imports transactions for current day and adds latest 2`] = `
Array [
  Object {
    "account": "one",
    "amount": -434,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id58",
    "imported_id": "b89c446a-c425-4ce2-b3b9-251b3fbe1568",
    "imported_payee": "Transaction 118",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id40",
    "payee_name": "Transaction 118",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1865,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id51",
    "imported_id": "622f7b61-a6be-4ce5-bd2f-50eb14c12f42",
    "imported_payee": "Transaction 53",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id33",
    "payee_name": "Transaction 53",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -2147,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id49",
    "imported_id": "3591ad03-b705-42e0-945d-402a70371c49",
    "imported_payee": "Transaction 13",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id31",
    "payee_name": "Transaction 13",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -2947,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id54",
    "imported_id": "d5ec5f37-2ac1-4b8d-b020-8eda39d4f61a",
    "imported_payee": "Transaction 96",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id36",
    "payee_name": "Transaction 96",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -2947,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id55",
    "imported_id": "d5ec5f37-2ac1-4b8d-b020-8eda39d4f61a2",
    "imported_payee": "Transaction Bazillion",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id37",
    "payee_name": "Transaction Bazillion",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3170,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id59",
    "imported_id": "aa69713d-f3ea-4914-a4fd-f04fcad242ba",
    "imported_payee": "Transaction 89",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id41",
    "payee_name": "Transaction 89",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3339,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id57",
    "imported_id": "ade5fc3c-cce6-435e-9634-9e03c7876373",
    "imported_payee": "Transaction 65",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id39",
    "payee_name": "Transaction 65",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4911,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id50",
    "imported_id": "01a3a594-a381-49d1-bcf8-331a3c410900",
    "imported_payee": "Transaction 78",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id32",
    "payee_name": "Transaction 78",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5391,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id56",
    "imported_id": "8083e915-7eb0-4226-9514-2574e39ed333",
    "imported_payee": "Transaction 49",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id38",
    "payee_name": "Transaction 49",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5709,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id53",
    "imported_id": "7f438a75-1ba3-40a0-a25b-689c8e720e31",
    "imported_payee": "Transaction 100",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id35",
    "payee_name": "Transaction 100",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5730,
    "category": null,
    "cleared": 1,
    "date": 20171017,
    "error": null,
    "id": "id52",
    "imported_id": "7b5a9df8-ca05-411b-82f9-4261b2df5b8c",
    "imported_payee": "Transaction 115",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id34",
    "payee_name": "Transaction 115",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 9675,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id63",
    "imported_id": "4a907027-bed2-4f5d-ac67-b78fb14cead9",
    "imported_payee": "Transaction 67",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id45",
    "payee_name": "Transaction 67",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -2407,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id60",
    "imported_id": "753911ce-7b09-4cb3-8447-ac6eb74e727e",
    "imported_payee": "Transaction 32",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id42",
    "payee_name": "Transaction 32",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3006,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id65",
    "imported_id": "14ea70a2-511f-4797-92ae-81772acedf86",
    "imported_payee": "Transaction 20",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id47",
    "payee_name": "Transaction 20",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3935,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id64",
    "imported_id": "5568650a-db53-43ce-9812-2755e8c7ca62",
    "imported_payee": "Transaction 14",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id46",
    "payee_name": "Transaction 14",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3987,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id62",
    "imported_id": "831051b1-5d93-4df8-ab04-dd69615cd001",
    "imported_payee": "Transaction 6",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id44",
    "payee_name": "Transaction 6",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4837,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id61",
    "imported_id": "e1f42f2d-ab97-468c-a859-df571e858896",
    "imported_payee": "Transaction 119",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id43",
    "payee_name": "Transaction 119",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4936,
    "category": null,
    "cleared": 1,
    "date": 20171016,
    "error": null,
    "id": "id66",
    "imported_id": "86c867c2-6d44-4556-84e7-015226144a7d",
    "imported_payee": "Transaction 21",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id48",
    "payee_name": "Transaction 21",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 8105,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id18",
    "imported_id": "5629ec0c-e559-49f4-9105-91d7b8b8738a",
    "imported_payee": "Transaction 90",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Transaction 90",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -473,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id22",
    "imported_id": "45a2ad98-acbc-4120-a856-dec0839fa73c",
    "imported_payee": "Transaction 54",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id9",
    "payee_name": "Transaction 54",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1462,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id20",
    "imported_id": "8791ca7e-5c19-4f23-bdf9-f60ee2a90081",
    "imported_payee": "Transaction 79",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id7",
    "payee_name": "Transaction 79",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4207,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id19",
    "imported_id": "254ad9b3-23aa-4f70-b617-e126e054cc0e",
    "imported_payee": "Transaction 3",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id6",
    "payee_name": "Transaction 3",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5093,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id21",
    "imported_id": "8e0ddc45-d545-4504-bed7-23c417a90f90",
    "imported_payee": "Transaction 51",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id8",
    "payee_name": "Transaction 51",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5938,
    "category": null,
    "cleared": 1,
    "date": 20171015,
    "error": null,
    "id": "id23",
    "imported_id": "00ab7e01-73f7-4da0-98f3-233f1dcc5b3e",
    "imported_payee": "Transaction 68",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id10",
    "payee_name": "Transaction 68",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 35884,
    "category": "id2",
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id4",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id3",
    "payee_name": "Starting Balance",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 1,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -1105,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id25",
    "imported_id": "6a764abf-69f4-47a6-94e1-638c7df0e245",
    "imported_payee": "Transaction 64",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id12",
    "payee_name": "Transaction 64",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3200,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id24",
    "imported_id": "1b25b9df-8aa4-47c8-9792-75f4c38e351f",
    "imported_payee": "Transaction 11",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id11",
    "payee_name": "Transaction 11",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3342,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id28",
    "imported_id": "f4b34ee3-6d5b-4625-bffc-057a72270140",
    "imported_payee": "Transaction 48",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id15",
    "payee_name": "Transaction 48",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -3984,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id26",
    "imported_id": "768b6d36-0ad7-47fb-a631-145170adc0b9",
    "imported_payee": "Transaction 107",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id13",
    "payee_name": "Transaction 107",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4524,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id30",
    "imported_id": "f4e3a3f2-c20f-4667-8df6-6530bf5f4cb0",
    "imported_payee": "Transaction 56",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id17",
    "payee_name": "Transaction 56",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -4881,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id27",
    "imported_id": "ceb53daf-7318-4aee-a562-19a45654eaa7",
    "imported_payee": "Transaction 28",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id14",
    "payee_name": "Transaction 28",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": -5541,
    "category": null,
    "cleared": 1,
    "date": 20171014,
    "error": null,
    "id": "id29",
    "imported_id": "af2d6eba-f75e-4ee0-a9ad-5d9f8264797b",
    "imported_payee": "Transaction 114",
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id16",
    "payee_name": "Transaction 114",
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Account sync reconcile handles transactions with undefined fields 1`] = `
Array [
  Object {
    "account": "one",
    "amount": 0,
    "category": null,
    "cleared": 1,
    "date": 20200102,
    "error": null,
    "id": "id3",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": null,
    "payee_name": null,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
  Object {
    "account": "one",
    "amount": 2948,
    "category": null,
    "cleared": 1,
    "date": 20200101,
    "error": null,
    "id": "one",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": null,
    "payee_name": null,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;
